# ComfyUI_frontend

./: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  version.txt  vite.config.mts
.github/workflows/: build_by_comment.yml  build_gpu_image.yml  build_model_volume.yml  publish_dev_pkg.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  publish_to_uat.yml  update_requirements.yml
comfyui_frontend_package/: setup.py
docs/guidance/: service-worker-caching.md
scripts/: build_pypi_package.sh
src/: App.vue  main.ts  service-worker.js
src/services/pwa/: runtimeCacheProtocol.ts  serviceWorkerManager.ts  serviceWorkerPaths.test.ts  serviceWorkerPaths.ts
