[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-frontend-package-ljm"
dynamic = ["version"]
description = "Official front-end implementation of ComfyUI"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://comfy.org"
Repository = "https://github.com/Comfy-Org/ComfyUI_frontend"

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["comfyui_frontend_package"]

[tool.setuptools.package-data]
comfyui_frontend_package = ["static/**/*"]
